[package]
name = "paged-color"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "ICC-based color management. Resolves all paints to linear RGB before GPU handoff."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

# lcms2 is native-only here (C lib via lcms2-sys). On wasm32 we use
# qcms — Mozilla's pure-Rust ICC library that ships in Firefox.
# Carries CMYK + iccv4 behind feature flags.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lcms2 = "6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
qcms = { version = "0.3", default-features = false, features = ["cmyk", "iccv4-enabled"] }

[dev-dependencies]
# Concept 2 (C3 bake-off evidence) — qcms compiled NATIVELY so
# tests/parity.rs can run lcms2 and qcms side-by-side on the same
# profile + patch set and bound their dE. Runtime wasm32 builds keep
# getting qcms from the target-gated dependency above.
qcms = { version = "0.3", default-features = false, features = ["cmyk", "iccv4-enabled"] }
