[package]
name = "paged-compose"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Scene graph → flat display list (the GPU handoff format)."

[lints]
workspace = true

[dependencies]
paged-scene = { path = "../paged-scene" }
paged-text = { path = "../paged-text" }
paged-color = { path = "../paged-color" }
ttf-parser = "0.24"
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
