[package]
name = "paged-compose"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Scene graph → flat display list (the GPU handoff format)."

[lints]
workspace = true

[dependencies]
paged-scene = { path = "../paged-scene" }
paged-text = { path = "../paged-text" }
paged-color = { path = "../paged-color" }
ttf-parser = "0.24"
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
# Plugin scene-layer IR (C-1) crosses the wire as serde/tsify; the IR +
# converter live here so paged-renderer can splice it at compose time.
serde = { workspace = true }
tsify-next = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
# Wire-shape round-trip test for the C-1 Stage-B PixelLayer IR prototype.
serde_json = "1"
