[package]
name = "paged-export-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Print-grade PDF (PDF/X-4) export backend over the resolved display list."

[lints]
workspace = true

[dependencies]
paged-compose = { path = "../paged-compose" }
paged-renderer = { path = "../paged-renderer", default-features = false }
paged-color = { path = "../paged-color" }
paged-parse = { path = "../paged-parse" }
pdf-writer = "0.15"
subsetter = "0.2"
xmp-writer = "0.3"
ttf-parser = "0.25"
bytes = { workspace = true }
flate2 = "1"
image = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
lopdf = "0.41"
