[package]
name = "paged-flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Content-agnostic region-chain flow protocol (the composition FlowId seam). Format-neutral; no renderer."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = "1"
